--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/styles.css">
-	<title>Decorista</title>
+	<title>Sitecrane</title>
 </head>
 
 <body>
@@ -13,7 +13,11 @@
 	<div class="header__wrapper">
 		<div class="header__container _container">
 			<div class="header__body">
-				<a href="" class="header__logo">Logo</a>
+
+				<a href="" class="header__logo _ibg">
+					<img src="img/logo.png" alt="logo">
+				</a>
+
 				<div class="header__menu menu">
 					<nav class="menu__body">
 						<ul class="menu__list">
@@ -45,9 +49,33 @@
 				<div class="main-block__wrapper">
 					<div class="main-block__container _container">
 						<div class="main-block__body">
-							<h1 class="main-block__title">Building <span class="title_blue">website<br>
+							<h1 class="main-block__title">Building<span class="title_blue">website<br>
 									designs</span>, <spanc class="title_turq">brands</spanc> &<br><span
-									class="title_pink">services</h1>
+									class="title_pink">services
+							</h1>
+							<div class="main-block__subtitle">Based in <b>Derby</b>, we are small digital design & development
+								group.
+							</div>
+							<div class="main-block__symbols">
+								<span class="main-block__symbol">
+									<img src="img/symbols/round-top-left.png" alt="sybol-round">
+								</span>
+								<span class="main-block__symbol">
+									<img src="img/symbols/three-lines-left.png" alt="sybol-lines">
+								</span>
+								<span class="main-block__symbol">
+									<img src="img/symbols/7-left.png" alt="sybol-round">
+								</span>
+								<span class="main-block__symbol">
+									<img src="img/symbols/7-top-right.png" alt="sybol-round">
+								</span>
+								<span class="main-block__symbol">
+									<img src="img/symbols/fig-midle-right.png" alt="sybol-fig">
+								</span>
+								<span class="main-block__symbol">
+									<img src="img/symbols/round-right-bottom.png" alt="sybol-round">
+								</span>
+							</div>
 						</div>
 					</div>
 				</div>
