upated mobile version

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 	<div class="header__wrapper">
 		<div class="header__container _container">
 			<div class="header__body">
-
-				<a href="" class="header__logo _ibg">
-					<img src="img/logo.png" alt="logo">
-				</a>
-
+				<div class="header__main">
+					<a href="" class="header__logo _ibg">
+						<img src="img/logo.png" alt="logo">
+					</a>
+				</div>
 				<div class="header__menu menu">
 					<nav class="menu__body">
 						<ul class="menu__list">
@@ -36,7 +36,7 @@
 						</ul>
 					</nav>
 				</div>
-				<a href="" class="header__button">Explore Packages</a>
+				<a href="" class="header__button button">Explore Packages</a>
 				<div class="icon-menu">
 					<span class="icon-menu__line"></span>
 				</div>
@@ -49,7 +49,7 @@
 				<div class="main-block__wrapper">
 					<div class="main-block__container _container">
 						<div class="main-block__body">
-							<h1 class="main-block__title">Building<span class="title_blue">website<br>
+							<h1 class="main-block__title">Building <span class="title_blue">website<br>
 									designs</span>, <spanc class="title_turq">brands</spanc> &<br><span
 									class="title_pink">services
 							</h1>
