--- a/index.html
+++ b/index.html
@@ -76,13 +76,152 @@
 									<img src="img/symbols/round-right-bottom.png" alt="sybol-round">
 								</span>
 							</div>
+							<a href="" class="main-block__button button">Explore Packages</a>
 						</div>
 					</div>
 				</div>
 			</section>
-		</main>
+			<section class="page__about about">
+				<div class="about__wrapper">
+					<div class="about__container _container">
+						<div class="about__body">
+							<h2 class="about__title title">Now, about your project...</h2>
+							<form action="#" id="form" class="about__form form">
+								<div class="form__column">
+									<div class="form__text">We like being on a first-name basis, but it also helps us get in
+										touch with you.</div>
+									<div class="form__row">
+										<div class="form__item">
+											<label for="formName" class="form__label">What is your full name?</label>
+											<input for="formName" type="text" placeholder="John Smith" class="form__input _req">
+										</div>
+										<div class="form__item">
+											<label for="formEmail" class="form__label">What is your email adress?</label>
+											<input for="formEmail" type="text" placeholder="johnsmith@example.com"
+												class="form__input _req _email">
+										</div>
+									</div>
+									<div class="form__text">What sort of creative work do you need help with? You can read
+										about
+										our servicess <a href="#">here</a>.</div>
+									<div class="form__item">
+										<div class="form__checkboxes">
+											<div class="form__checkbox checkbox">
+												<input id="formCheckboxBranding" type="checkbox" name="branding"
+													class="checkbox__input">
+												<label for="formCheckboxBranding" class="checkbox__label">
+													<span>Branding</span>
+												</label>
+											</div>
+											<div class="form__checkbox">
+												<input id="formCheckboxStrategy" type="checkbox" name="strategy"
+													class="checkbox__input">
+												<label for="formCheckboxStrategy" class="checkbox__label">
+													<span>Strategy</span>
+												</label>
+											</div>
+
+											<div class="form__checkbox">
+												<input id="formCheckboxMotionDesign" type="checkbox" name="motionDesign"
+													class="checkbox__input">
+												<label for="formCheckboxMotionDesign" class="checkbox__label">
+													<span>Motion Design</span>
+												</label>
+											</div>
+
+											<div class="form__checkbox">
+												<input id="formCheckboxDevelopment" type="checkbox" name="development"
+													class="checkbox__input">
+												<label for="formCheckboxDevelopment" class="checkbox__label">
+													<span>Development</span>
+												</label>
+											</div>
+											<div class="form__checkbox">
+												<input id="formCheckboxProductDesign" type="checkbox" name="productDesign"
+													class="checkbox__input">
+												<label for="formCheckboxProductDesign" class="checkbox__label">
+													<span>Product Design</span>
+												</label>
+											</div>
+											<div class="form__checkbox">
+												<input id="formCheckboxMarketing" type="checkbox" name="marketing"
+													class="checkbox__input">
+												<label for="formCheckboxMarketing" class="checkbox__label">
+													<span>Marketing</span>
+												</label>
+											</div>
+											<div class="form__checkbox">
+												<input id="formCheckboxCopywriting" type="checkbox" name="copywriting"
+													class="checkbox__input">
+												<label for="formCheckboxCopywriting" class="checkbox__label">
+													<span>Copywriting</span>
+												</label>
+											</div>
+											<div class="form__checkbox">
+												<input id="formCheckboxAdvisory" type="checkbox" name="advisory"
+													class="checkbox__input">
+												<label for="formCheckboxAdvisory" class="checkbox__label">
+													<span>Advisory</span>
+												</label>
+											</div>
+
+
+											<div class="form__checkbox">
+												<input id="formCheckboxCompositing" type="checkbox" name="compositing"
+													class="checkbox__input">
+												<label for="formCheckboxCompositing" class="checkbox__label">
+													<span>Compositing</span>
+												</label>
+											</div>
+											<button type="button" class="form__button_add">+ Add something else</button>
+											<div class="form__item _hidden">
+												<input for="formAdditional" type="text" placeholder="type something here..."
+													class="form__input form__input_additional">
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="form__column">
+									<div class="form__text">Tell us you need help with, the purpose of this project and
+										problems
+										we're solving.</div>
+									<div class="form__item">
+										<label for="formMessage" class="form__label">What is your project all about?</label>
+										<textarea name="message" id="formMessage" placeholder="Lorem ipsum dolor"
+											class="form__input _req"></textarea>
+									</div>
+									<div class="form__item">
+										<progress value="0" max="3" class="form__progress"></progress>
+										<div value="3" class="form-progress__text"></div>
+										<div class="progress-bar__progress"></div>
+									</div>
+									<button type="submit" class="form__button uppercase">Submit</button>
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
+	</div>
+	</section>
+	</main>
 	</div>
 	<script src="js/script.js"></script>
-</body>
+<footer class="footer">
+	<div class="footer__container _container">
+		<div class="footer__body">
+			<div class="footer__column">
+				<a href="" class="footer__item footer__item_privacy footer__item_link">Privacy & Terms.</a>
+				<a href="" class="footer__item footer__item_contact footer__item_link">Contact Us</a>
+			</div>
+			<div class="footer__column">
+				<span class="footer__item footer__item_site">sitecrane.com</span>
+			</div>
+			<div class="footer__column">
+				<span class="footer__item footer__item_copyright">Sitecrane &copy; 2022</span>
+			</div>
+		</div>
+	</div>
+	</div>
+</footer></body>
 
 </html>
